--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <div class="container">
@@ -35,8 +32,7 @@
                   src="./icon/phone.svg"
                   alt="Phone icon"
                   width="30"
-                  height="30"
-                />
+                  height="30">
                 <a class="link contacts-link" href="tel:+46765771605">
                   +46765771605
                 </a>
@@ -47,8 +43,7 @@
                   src="./icon/email.svg"
                   alt="Email icon"
                   width="30"
-                  height="30"
-                />
+                  height="30">
                 <a
                   class="link contacts-link"
                   href="mailto:veraminich@gmail.com"
@@ -62,8 +57,7 @@
                   src="./icon/linkedin.svg"
                   alt="Linkedin icon"
                   width="30"
-                  height="30"
-                />
+                  height="30">
                 <a
                   class="link contacts-link"
                   href="https://www.linkedin.com/in/vera-korzun-176ab598/"
@@ -77,8 +71,7 @@
                   src="./icon/paper-plane.svg"
                   alt="Telegram icon"
                   width="30"
-                  height="30"
-                />
+                  height="30">
                 <span>Vera_KM</span>
               </li>
             </ul>
@@ -304,8 +297,7 @@ const logError = (id) =&gt; {
             <img
               src="./icon/rs_school_js.svg"
               alt="RS School logo"
-              width="100"
-            />
+              width="100">
           </a>
         </div>
         <div>2022</div>
